[package]
name = "wasm-logger"
version = "0.1.0"
license = "MIT"
authors = ["Sam Clements <sam@borntyping.co.uk>", "Bridger Herman <scooteeroo@gmail.com>"]
description = "A logger that prints all messages with a readable output format"
repository = "https://github.com/bridger-herman/wasm-logger"

[dependencies]
log = { version = "^0.4.5", features = ["std"] }
wasm-bindgen = "0.2"
